# PingMe

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  INSTALL.md  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_is_snoozed_to_reminders.py  b1c2d3e4f5a6_add_user_settings_table.py  c2d3e4f5a6b7_add_timezone_to_user_settings.py  c3c0391c7513_add_is_confirmed_and_message_id_to_.py  d4e5f6a7b8c9_add_recurrence_to_reminders.py  e5f6a7b8c9d0_add_recurrence_anchor_to_reminders.py  f6a7b8c9d0e1_backfill_recurrence_anchor.py
app/: __init__.py  config.py
app/api/: __init__.py  app.py  routes.py  schemas.py
app/bot/: __init__.py  bot.py
app/bot/handlers/: __init__.py  basic.py  fallback.py  reminders.py  settings.py
app/database/: __init__.py  base.py  models.py
app/services/: __init__.py  scheduler.py
tests/: test_callbacks.py  test_main.py  test_recurrence.py  test_reminder_parser.py  test_scheduler.py  test_settings.py
