[project]
name = "pingme"
version = "1.2.11"
description = "Telegram reminder bot"
requires-python = ">=3.13"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.bumpversion]
current_version = "1.2.11"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = "--no-verify"
allow_dirty = false
message = "[release] v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
